# woocommerce-playwright-python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  compose.yml  local.env  pyproject.toml  store-setup.sh  woocommerce-playwright-python.code-workspace
.github/workflows/: daily-test-run.yml
scripts/: env_restart.sh  env_start.sh  store_setup.sh
tests/: conftest.py
tests/_fixtures/: auth_fixtures.py  cleanup_fixtures.py  customer_fixtures.py  order_fixtures.py  product_fixtures.py  request_fixtures.py  setings_fixtures.py  settings_fixtures.py  store_settings_fixtures.py
tests/_helpers/: product_helpers.py
tests/_models/customer/: cart_page.py  checkout_page.py  my_account_dashboard_page.py  my_account_details_page.py  my_account_login_page.py  order_confirmation_page.py  product_page.py
tests/_models/merchant/: block_overlay.py
tests/_models/merchant/products/add_new_product/: add_new_product_page.py  product_data.py  product_data_attributes.py  product_data_section.py  product_data_variations.py
tests/_models/merchant/products/all_products/: all_products_page.py  all_products_table.py
tests/e2e/: _auth_test.py  customer_new_test.py  global_setup_test.py  order_test.py  product_test.py
