[project]
name = "woocommerce-playwright-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Rodel Calasagsag", email = "od.rodel.calasagsag@gmail.com" },
]
dependencies = []
requires-python = "==3.9.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "bash -c 'docker-compose up -d && bash ./store-setup.sh'"
stop = "docker-compose down --volumes"
restart = { composite = ["stop", "start"] }
test = "bash -c 'playwright install chromium && pytest -v'"

[dependency-groups]
test = ["pytest-playwright>=0.7.0", "python-dotenv>=1.1.0"]
