[project]
name = "woocommerce-playwright-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Rodel Calasagsag", email = "od.rodel.calasagsag@gmail.com" },
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
test = [
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.1.0",
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
]

[tool.pytest.ini_options]
addopts = "--browser chromium --base-url http://localhost:8080"
testpaths = ["tests"]

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "redefined-outer-name",
    "too-few-public-methods",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "bash -c 'docker-compose up -d && bash ./store-setup.sh && playwright install chromium'"
stop = "docker-compose down --volumes"
restart = { composite = ["stop", "start"] }
test = "pytest -v"
test-headed = "pytest -v --headed"
debug = "env PWDEBUG=1 pytest"
trace = "playwright show-trace"
codegen = "playwright codegen http://localhost:8080"
codegen-customer = "playwright codegen http://localhost:8080 --load-storage=playwright/.auth/customer.state.json"
lint = "pylint tests/"
format = "black ."
pre-commit = "pre-commit run --all-files"
